<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:animateLayoutChanges="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
		android:layout_gravity="center"
		android:gravity="center"
		android:orientation="vertical"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		tools:context="com.devandroid.ncuwlogin.MainActivity">

		<ImageView
            android:layout_marginTop="-20dp"
            android:contentDescription="@string/app_name"
			android:layout_width="150dp"
			android:layout_height="150dp"
			android:padding="8dp"
			android:src="@drawable/ic_main"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/kuas_wifi_auto_login"
            android:textColor="@color/primary_material_dark"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textStyle="bold"/>

		<TableLayout
			android:layout_marginTop="16dp"
			android:layout_marginBottom="5dp"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="40sp"
			android:layout_marginRight="40sp"
            android:id="@+id/tableLayout">

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/editText_user"
				android:hint="@string/username"
				android:textSize="15sp"
				android:background="@drawable/login_table_top"
				android:singleLine="true"
				android:inputType="textEmailAddress"
				android:imeOptions="actionNext"/>

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/editText_password"
				android:hint="@string/password"
				android:textSize="15sp"
				android:background="@drawable/login_table_bottom"
				android:inputType="textPassword"
				android:singleLine="true"
				android:imeOptions="actionSend"/>

		</TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:orientation="horizontal">

            <com.rey.material.widget.Button
                style="@style/BlueButtonRippleStyle"
                android:id="@+id/button_login"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_blue"
                android:textColor="@color/white"
                android:text="@string/save_and_login"
                app:rd_enable="true"/>

            <com.rey.material.widget.Button
                style="@style/RedButtonRippleStyle"
                android:id="@+id/button_logout"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_red"
                android:textColor="@color/white"
                android:layout_marginLeft="5sp"
                android:text="@string/logout"
                app:rd_enable="true"/>

        </LinearLayout>

        <com.rey.material.widget.ProgressView
            android:id="@+id/progressView"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_gravity="center"
            app:pv_autostart = "true"
            app:pv_circular="false"
            app:pv_progressStyle="@style/ColorsLinearProgressDrawableStyle"
            app:pv_progressMode="indeterminate"
            android:layout_marginRight="41sp"
            android:layout_marginLeft="41sp"
            android:visibility="gone"/>



		<TextView
			android:id="@+id/textView_debug"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
			android:gravity="center"
			android:visibility="gone"/>

	</LinearLayout>
</ScrollView>